# HousingPricePrediction

./: README.md  pyproject.toml
notebooks/: EDA.ipynb  eda_house_prices.ipynb
src/: main.py
src/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
src/catboost_info/learn/: events.out.tfevents
src/config/: best_hyperparams.yaml  model_config.yaml  preprocessing_config.yaml
src/data/: data_loader.py
src/models/: hpo_tuner.py  model.py  models_builders.py
src/models/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
src/models/catboost_info/learn/: events.out.tfevents
src/preprocessing/: pipeline.py  preprocessing_utils.py  transformers.py
src/utils/: utils.py
